; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/libnv/extr_nvpair.c_nvpair_create_number_array.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/libnv/extr_nvpair.c_nvpair_create_number_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@NV_TYPE_NUMBER_ARRAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @nvpair_create_number_array(i8* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %3
  %14 = load i64, i64* %7, align 8
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %13, %3
  %17 = load i32, i32* @EINVAL, align 4
  %18 = call i32 @ERRNO_SET(i32 %17)
  store i32* null, i32** %4, align 8
  br label %49

19:                                               ; preds = %13
  %20 = load i64, i64* %7, align 8
  %21 = mul i64 4, %20
  store i64 %21, i64* %9, align 8
  %22 = load i64, i64* %9, align 8
  %23 = call i8* @nv_malloc(i64 %22)
  store i8* %23, i8** %10, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = icmp eq i8* %24, null
  br i1 %25, label %26, label %27

26:                                               ; preds = %19
  store i32* null, i32** %4, align 8
  br label %49

27:                                               ; preds = %19
  %28 = load i8*, i8** %10, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = load i64, i64* %9, align 8
  %31 = call i32 @memcpy(i8* %28, i32* %29, i64 %30)
  %32 = load i8*, i8** %5, align 8
  %33 = load i32, i32* @NV_TYPE_NUMBER_ARRAY, align 4
  %34 = load i8*, i8** %10, align 8
  %35 = ptrtoint i8* %34 to i64
  %36 = trunc i64 %35 to i32
  %37 = load i64, i64* %9, align 8
  %38 = load i64, i64* %7, align 8
  %39 = call i32* @nvpair_allocv(i8* %32, i32 %33, i32 %36, i64 %37, i64 %38)
  store i32* %39, i32** %8, align 8
  %40 = load i32*, i32** %8, align 8
  %41 = icmp eq i32* %40, null
  br i1 %41, label %42, label %47

42:                                               ; preds = %27
  %43 = call i32 (...) @ERRNO_SAVE()
  %44 = load i8*, i8** %10, align 8
  %45 = call i32 @nv_free(i8* %44)
  %46 = call i32 (...) @ERRNO_RESTORE()
  br label %47

47:                                               ; preds = %42, %27
  %48 = load i32*, i32** %8, align 8
  store i32* %48, i32** %4, align 8
  br label %49

49:                                               ; preds = %47, %26, %16
  %50 = load i32*, i32** %4, align 8
  ret i32* %50
}

declare dso_local i32 @ERRNO_SET(i32) #1

declare dso_local i8* @nv_malloc(i64) #1

declare dso_local i32 @memcpy(i8*, i32*, i64) #1

declare dso_local i32* @nvpair_allocv(i8*, i32, i32, i64, i64) #1

declare dso_local i32 @ERRNO_SAVE(...) #1

declare dso_local i32 @nv_free(i8*) #1

declare dso_local i32 @ERRNO_RESTORE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
